[gd_scene load_steps=13 format=3 uid="uid://cmps4e380d2e8"]

[ext_resource type="Script" path="res://scripts/block/goal.gd" id="1_0dqw8"]
[ext_resource type="Texture2D" uid="uid://b5psm6lp6duvd" path="res://assets/images/bloc_animation/goal_animation.png" id="2_acogj"]
[ext_resource type="Texture2D" uid="uid://dtqqhkvtq3l2o" path="res://assets/images/spritesheet/spritesheet.png" id="2_hr0rm"]
[ext_resource type="Script" path="res://scripts/ui/goal_animation.gd" id="3_0g71m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_konlm"]
atlas = ExtResource("2_acogj")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0d6iu"]
atlas = ExtResource("2_acogj")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6651s"]
atlas = ExtResource("2_acogj")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdgtr"]
atlas = ExtResource("2_acogj")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3ntr"]
atlas = ExtResource("2_acogj")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lutso"]
atlas = ExtResource("2_acogj")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ui1ja"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_konlm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0d6iu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6651s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdgtr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3ntr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lutso")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1c4r8"]
size = Vector2(0, 0)

[node name="Goal" type="Area2D"]
z_index = -2
collision_layer = 2
collision_mask = 2
script = ExtResource("1_0dqw8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.556863)
sprite_frames = SubResource("SpriteFrames_ui1ja")
script = ExtResource("3_0g71m")

[node name="NinePatch" type="NinePatchRect" parent="."]
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
texture = ExtResource("2_hr0rm")
region_rect = Rect2(16, 48, 16, 16)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1c4r8")
debug_color = Color(0.493207, 0.429172, 1, 0.376471)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
